[package]
name = "stream_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.25"
error-chain = "0.12.4"
flate2 = "1.0.25"
quick-xml = "0.27.1"
